# x86_Linux_OS

./: CMakeLists.txt  README.md
script/: img-write-linux.sh  img-write-osx.sh  img-write-win.bat  qemu-debug-linux.sh  qemu-debug-osx.sh  qemu-debug-win.bat
source/applib/: CMakeLists.txt  cstart.c  lib_syscall.h
source/boot/: CMakeLists.txt  boot.c  boot.h  start.S
source/init/: CMakeLists.txt  link.lds
source/kernel/: CMakeLists.txt  kernel.lds
source/kernel/core/: memory.c  task.c
source/kernel/cpu/: irq.c
source/kernel/dev/: console.c  dev.c  disk.c  kbd.c  time.c  tty.c
source/kernel/fs/: fs.c
source/kernel/fs/fatfs/: fatfs.c
source/kernel/include/cpu/: mmu.h
source/kernel/include/fs/fatfs/: fatfs.h
source/kernel/include/tools/: klib.h
source/kernel/init/: first_task.c  first_task_entry.S  lib_syscall.c  start.S
source/kernel/tools/: klib.c  list.c
source/loader/: CMakeLists.txt  loader.h  loader_16.c  start.S
source/loop/: CMakeLists.txt  link.lds  main.c
source/shell/: CMakeLists.txt  link.lds  main.c
source/snake/: CMakeLists.txt  link.lds
